--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "react-course-final",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000/",
   "dependencies": {
     "@material-ui/core": "latest",
     "@material-ui/data-grid": "^4.0.0-alpha.10",
+    "@material-ui/icons": "^4.9.1",
     "@material-ui/x-grid": "^4.0.0-alpha.10",
     "axios": "^0.21.0",
     "faker": "^5.1.0",
